traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:6: error: not found: value get
    setPos(getX()+1,get(Y))
                    ^TraversalZigZag:6: error: not found: value Y
    setPos(getX()+1,get(Y))
                        ^TraversalZigZag:11: error: value update is not a member of Int
    if(getX()=0){
       ^TraversalZigZag:16: error: not found: value get
    setPos(getX()+1,get(Y))
                    ^TraversalZigZag:16: error: not found: value Y
    setPos(getX()+1,get(Y))
                        ^TraversalZigZag:25: error: not found: value get
    setPos(getX()-1,get(Y))
                    ^TraversalZigZag:25: error: not found: value Y
    setPos(getX()-1,get(Y))
                        ^